log
Thu 07 Sep 2023 02:11:03 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
f563109
Thu 07 Sep 2023 02:12:13 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
4d531f3
Thu 07 Sep 2023 02:14:12 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c4250be
Thu 07 Sep 2023 02:17:35 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
908d08d
Thu 07 Sep 2023 06:21:52 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key, map->capacity);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
c7d9312
Thu 07 Sep 2023 06:25:34 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:43:8: error: unused variable ‘i’ [-Werror=unused-variable]
   43 |   long i = hash(key, map->capacity);
      |        ^
cc1: all warnings being treated as errors
Compilation failed
17362e0
Thu 07 Sep 2023 06:26:57 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
be83f6e
Thu 07 Sep 2023 06:27:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
986df49
Thu 07 Sep 2023 06:30:11 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 20/70
fd16e48
Thu 07 Sep 2023 06:36:36 PM UTC: 
 hashmap.c | 8 +-------
 1 file changed, 1 insertion(+), 7 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:46:12: error: unused variable ‘current’ [-Werror=unused-variable]
   46 |     Pair * current = map->buckets[i];
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b5f7cec
Thu 07 Sep 2023 06:38:33 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
c308b4f
Thu 07 Sep 2023 06:39:38 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
91e3b7c
Thu 07 Sep 2023 06:40:00 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
2a10c46
Thu 07 Sep 2023 07:01:18 PM UTC: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
29cb869
Thu 07 Sep 2023 07:01:54 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
1b8390f
Thu 07 Sep 2023 07:02:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
79585a0
Thu 07 Sep 2023 07:04:12 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ebd407b
Thu 07 Sep 2023 07:16:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
498684b
Thu 07 Sep 2023 07:17:14 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
18e65c3
Thu 07 Sep 2023 07:18:43 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
a75af97
Thu 07 Sep 2023 07:35:01 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
9727d9d
Thu 07 Sep 2023 07:37:12 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
80c4d26
Thu 07 Sep 2023 07:37:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
4ed250c
Thu 07 Sep 2023 07:44:30 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|3
total_score: 40/70
07748c3
Thu 07 Sep 2023 07:52:31 PM UTC: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
6a64ea2
Fri 08 Sep 2023 08:28:53 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|2
total_score: 50/70
4c84e97
Fri 08 Sep 2023 08:29:47 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
10e3a3d
Fri 08 Sep 2023 08:35:17 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  12|2
total_score: 50/70
4a46a28
Fri 08 Sep 2023 08:38:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
fde06e1
Fri 08 Sep 2023 08:45:09 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  13|2
total_score: 50/70
365c709
Fri 08 Sep 2023 08:46:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
4b90838
Fri 08 Sep 2023 08:46:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
92ed96c
Fri 08 Sep 2023 08:47:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
8c78da2
Fri 08 Sep 2023 08:47:44 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
53a89b2
Fri 08 Sep 2023 08:50:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
cd3424d
Fri 08 Sep 2023 11:12:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
909c9f1
Fri 08 Sep 2023 11:20:14 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:78:68: error: expected ‘;’ before ‘)’ token
   78 |     map->buckets= (Pair **) malloc (sizeof(Pair *) * map->capacity));
      |                                                                    ^
      |                                                                    ;
hashmap.c:78:68: error: expected statement before ‘)’ token
hashmap.c:76:13: error: unused variable ‘old_buckets’ [-Werror=unused-variable]
   76 |     Pair ** old_buckets = map->buckets;
      |             ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
832cc00
